# CrabImapSync

./: Cargo.toml  FUNDING.yml  PLAN.md  README.md  SPEC.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: OAUTH2.md  SMOKE.md  _config.yml  index.md
src/: auth.rs  cli.rs  config.rs  error.rs  imap_client.rs  lib.rs  main.rs  oauth.rs  progress.rs  retry.rs  sync.rs
tests/: integration.rs
tests/common/: mod.rs
